Authentication Page Views

--- a/public/back/css/material-dashboard.css
+++ b/public/back/css/material-dashboard.css
@@ -410,11 +410,14 @@ Copyright (c) 2015 Daniel Eden
     }
 }
 
-/*.ps-container.ps-active-x>.ps-scrollbar-x-rail,
+
+/* scroll-bar */
+
+.ps-container.ps-active-x>.ps-scrollbar-x-rail,
 .ps-container.ps-active-y>.ps-scrollbar-y-rail {
     display: block;
     background-color: transparent;
-}*/
+}
 
 .ps-container.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail {
     background-color: #eee;
