Update Material Dashboard scss

--- a/public/back/sass/material-dashboard.scss
+++ b/public/back/sass/material-dashboard.scss
@@ -20,7 +20,7 @@
 
 
 //variables and mixins
-@import "../_scss/md/variables";
+// @import "../_scss/md/variables";
 @import "../_scss/md/mixins";
 @import "../_scss/md/shadows";
 
